fixed center on iphone nav

--- a/style1.css
+++ b/style1.css
@@ -22,6 +22,7 @@
 			font-size: 1.3em;
 			text-shadow: 2px 2px pink;
 			margin-top: 10px;
+			margin-right: auto;
 
 
 		}
